--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 *.xcuserstate
 
 Feudal.xcodeproj/project.xcworkspace/xcuserdata/ret.xcuserdatad/UserInterfaceState.xcuserstate
+
+Submodules/ShareKit
+
+Submodules/ShareKit
