--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Feudal.xcodeproj/project.xcworkspace/xcuserdata/ret.xcuserdatad/UserInterfaceSta
 Submodules/ShareKit
 
 Submodules/ShareKit
+
+Submodules/ShareKit
